--- a/src/pages/tags/[tag]/[...page].astro
+++ b/src/pages/tags/[tag]/[...page].astro
@@ -16,7 +16,7 @@ export const getStaticPaths: GetStaticPaths = async ({ paginate }) => {
   const uniqueTags = getUniqueTags(allPostsByDate)
 
   return uniqueTags.flatMap((tag) => {
-    const filterPosts = allPostsByDate.filter((post) => post.data.tags.includes(tag))
+    const filterPosts = allPostsByDate.filter((post) => 'tags' in post.data && post.data.tags.includes(tag))
     return paginate(filterPosts, {
       pageSize: config.content.blogPageSize,
       params: { tag }
